# omni-llm

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  ENV_TEMPLATE.env  LICENSE  README.md  SPECIFICATION.md  linkedin_post.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_api.py  test_deployment.py
deployment/cloudformation/: infrastructure-simple.yaml  infrastructure.yaml  minimal-infrastructure.yaml  simple-infrastructure.yaml
deployment/config/: prod.env  staging.env
deployment/scripts/: deploy-simple.sh  deploy.sh
examples/: Dockerfile  fallback_demo.py  requirements.txt  staging_examples.md
scripts/: setup-dev.sh  setup-env.sh
src/: __init__.py  lambda_function.py
src/core/: __init__.py  exceptions.py  router.py  validators.py
src/models/: __init__.py  architecture.py
src/providers/: __init__.py  base_provider.py  langchain_provider.py  openai_provider.py
src/utils/: __init__.py  config.py  logger.py
